fixed hiding/showing columns based on checkboxes

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -57,7 +57,7 @@
                     <tr>
                         <th></th>
                         <th class="conjugations" colspan="4">A1</th>
-                        <th colspan="7">A2</th>
+                        <th class="conjugations others" colspan="7">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
                         <th class="conjugations" colspan="5">B2</th>
                         <th class="tense-sequence" colspan="4"></th>
