fine-tunining stats table

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -71,7 +71,7 @@
                         <!-- A2 -->
                         <th class="conjugations" colspan="2">imparfait</th>
                         <th class="conjugations" colspan="2">futur simple</th>
-                        <th class="others" colspan="1">prépositions de temps</th>
+                        <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
                         <th class="conjugations" colspan="2">impératif</th>
 
                         <!-- B1 -->
