--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -40,6 +40,9 @@
 
                 <div id="checkboxes">
                     <label>
+                        <input type="checkbox" name="duration" checked="checked">Colonne de durée
+                    </label>
+                    <label>
                         <input type="checkbox" name="conjugations" checked="checked">Conjugaisons
                     </label>
                     <label>
@@ -55,7 +58,8 @@
             <table id="stats-table">
                 <thead>
                     <tr>
-                        <th></th>
+                        <th rowspan="3">date</th>
+                        <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th class="conjugations" colspan="4">A1</th>
                         <th class="conjugations others" colspan="7">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
@@ -63,7 +67,6 @@
                         <th class="tense-sequence" colspan="4"></th>
                     </tr>
                     <tr>
-                        <th rowspan="2">date</th>
                         <!-- A1 -->
                         <th class="conjugations" colspan="2">présent</th>
                         <th class="conjugations" colspan="2">passé composé</th>
@@ -157,6 +160,7 @@
                     <template id="template-table-row">
                         <tr>
                             <td data-key="date"></td>
+                            <td class="duration" data-key="duration"></td>
 
                             <!-- A1 -->
                             <td class="conjugations" data-key="conjugations.html?Le%20pr%C3%A9sent"></td>
