fixed errors in time prepositions

--- a/french/pages/exercise_time_prepositions.html
+++ b/french/pages/exercise_time_prepositions.html
@@ -70,7 +70,7 @@
                     </li>
 
                     <li>
-                        <input type="text" pattern="depuis">
+                        <input type="text" pattern="[Dd]epuis">
                         <b title="depuis">le début de l’hiver</b>, il neige continuellement.
                     </li>
 
@@ -195,8 +195,8 @@
                     </li>
 
                     <li>
-                        <span title="Ça fait plus de quatre mois qu'Émilie pratique le violon.">Émilie étudie le violon
-                            depuis plus de quatre mois.</span>
+                        <span title="Ça fait plus de quatre mois qu'Émilie pratique le violon.">Émilie pratique le
+                            violon depuis plus de quatre mois.</span>
                         <input type="text" pattern="Ça fait plus de quatre mois qu'Émilie pratique le violon[.]?">
                     </li>
 
