fixed things in time prepositions

--- a/french/pages/exercise_time_prepositions.html
+++ b/french/pages/exercise_time_prepositions.html
@@ -123,9 +123,9 @@
                     </li>
 
                     <li>
-                        Vous devez suivre des traitements
-                        <input type="text" pattern="pendant">
-                        <b title="pendant">trois mois, jusqu’au mois de juin</b>.
+                        Nous suivrons ces cours
+                        <input type="text" pattern="pour">
+                        <b title="pour">cinq semaines</b>.
                     </li>
 
                     <li>
@@ -147,9 +147,9 @@
                     </li>
 
                     <li>
-                        Tu travailleras à ce projet
-                        <input type="text" pattern="pendant">
-                        <b title="pendant">quatre mois, à partir de l’été</b>.
+                        J’habite à cet endroit
+                        <input type="text" pattern="depuis">
+                        <b title="depuis">trois ans</b>.
                     </li>
 
                     <li>
@@ -176,9 +176,10 @@
 
                 <ol class="input-sentence-width">
                     <li>
-                        <span title="Ça fait dix ans qu'il n'a plus parlé à son père.">Il n’a plus parlé à son père
+                        <span title="Ça fait au moins dix ans qu'il n'a plus parlé à son père.">Il n’a plus parlé à son
+                            père
                             depuis au moins dix ans.</span>
-                        <input type="text" pattern="Ça fait dix ans qu'il n'a plus parlé à son père[.]?">
+                        <input type="text" pattern="Ça fait au moins dix ans qu'il n'a plus parlé à son père[.]?">
                     </li>
 
                     <li>
