fine-tuned exercise for time prepositions

--- a/french/pages/exercise_time_prepositions.html
+++ b/french/pages/exercise_time_prepositions.html
@@ -128,7 +128,7 @@
                             </li>
 
                             <li>
-                                Nous suivrons ces cours
+                                À partir de janvier, nous suivrons ces cours
                                 <input type="text" pattern="pour">
                                 <b title="pour">cinq semaines</b>.
                             </li>
@@ -195,11 +195,10 @@
                             </li>
 
                             <li>
-                                <span title="Ça fait plus de trois mois que Justine est absente de son travail.">Justine
-                                    est
-                                    absente du travail depuis plus de trois mois.</span>
+                                <span title="Ça fait plus de trois mois que Justine est absente du travail.">Justine
+                                    est absente du travail depuis plus de trois mois.</span>
                                 <input type="text"
-                                    pattern="Ça fait plus de trois mois que Justine est absente de son travail[.]?">
+                                    pattern="Ça fait plus de trois mois que Justine est absente du travail[.]?">
                             </li>
 
                             <li>
@@ -296,7 +295,7 @@
                             </li>
 
                             <li>
-                                Ils participeront à ce congrès
+                                L’année prochaine, ils participeront à ce congrès
                                 <input type="text" pattern="pendant">
                                 <b title="pendant">trois jours</b>.
                             </li>
@@ -320,7 +319,7 @@
                             <li>
                                 Aujourd’hui, nous sommes <b title="demain">le 20 septembre</b> :
                                 <input type="text" pattern="demain">
-                                , c’est le début de l’automne.
+                                , le 21, c’est le début de l’automne.
                             </li>
 
                             <li>
