fine-tuned text exercise for future perfect

--- a/french/pages/exercise_futureperfect.html
+++ b/french/pages/exercise_futureperfect.html
@@ -32,59 +32,59 @@
                     <li>
                         Je t’enverrai les photos(f) que
                         (<b title="j'aurai prises">je prendre</b>)
-                        <input type="text" class="wide" pattern="j'aurai prises">
+                        <input type="text" pattern="j'aurai prises">
                         pendant le voyage.
                     </li>
 
                     <li>
                         Dans deux heures, nous (<b title="aurons cueilli">cueillir</b>)
-                        <input type="text" class="wide" pattern="aurons cueilli">
+                        <input type="text" pattern="aurons cueilli">
                         au moins dix kilos de fraises.
                     </li>
 
                     <li>
                         Quand ils reviendront, elle
                         (<b title="sera sûrement revenue">revenir sûrement</b>)
-                        <input type="text" class="wide" pattern="sera sûrement revenue">
+                        <input type="text" class="extra-wide" pattern="sera sûrement revenue">
                     </li>
 
                     <li>
                         J’espère qu’Émilie (<b title="aura réussi">réussir</b>)
-                        <input type="text" class="wide" pattern="aura réussi">
+                        <input type="text" pattern="aura réussi">
                         cette entrevue.
                     </li>
 
                     <li>
                         Nous sortirons dès qu’il (<b title="aura ouvert">ouvrir</b>)
-                        <input type="text" class="wide" pattern="aura ouvert">
+                        <input type="text" pattern="aura ouvert">
                         la porte.
                     </li>
 
                     <li>
                         Aussitôt que vous (<b title="aurez obtenu">obtenir</b>)
-                        <input type="text" class="wide" pattern="aurez obtenu">
+                        <input type="text" pattern="aurez obtenu">
                         votre diplôme, vous pourrez travailler.
                     </li>
 
                     <li>
                         Pourras-tu me prêter les DVD que tu (<b title="auras vus">voir</b>)
-                        <input type="text" class="wide" pattern="auras vus"> .
+                        <input type="text" pattern="auras vus"> .
                     </li>
 
                     <li>
                         Ces gens sont de vieux amis que
                         (<b title="je n'aurai pas connus">je ne pas connaître</b>)
-                        <input type="text" class="wide" pattern="je n'aurai pas connus"> .
+                        <input type="text" class="extra-wide" pattern="je n'aurai pas connus"> .
                     </li>
 
                     <li>
                         Elle révisera les documents que nous
                         (<b title="aurons préparés">préparer</b>)
-                        <input type="text" class="wide" pattern="aurons préparés"> .
+                        <input type="text" pattern="aurons préparés"> .
                     </li>
 
                     <li>
-                        Quand je te (<b title="t'aurai présenté">présenter</b>)
+                        Quand je (<b title="t'aurai présenté">te présenter</b>)
                         <input type="text" class="wide" pattern="t'aurai présenté">
                         Juliette, tu l’aimeras.
                     </li>
@@ -98,7 +98,7 @@
                     <li>
                         Vous pourrez voter aussitôt que vous
                         (<b title="vous serez inscrit">s’inscrire</b>)
-                        <input type="text" class="wide" pattern="vous serez inscrit(e)"> .
+                        <input type="text" class="wide" pattern="vous serez inscrit"> .
                     </li>
 
                     <li>
@@ -109,24 +109,24 @@
 
                     <li>
                         Après que vous (<b title="aurez reçu">recevoir</b>)
-                        <input type="text" class="wide" pattern="aurez reçu">
+                        <input type="text" pattern="aurez reçu">
                         vos résultats, vous pourrez vous plaindre.
                     </li>
 
                     <li>
                         Je vous communiquerai ses coordonnées(f) quand elle me les
                         (<b title="aura données">donner</b>)
-                        <input type="text" class="wide" pattern="aura données"> .
+                        <input type="text" pattern="aura données"> .
                     </li>
 
                     <li>
                         Le jardin fleurira quand l’été (<b title="sera revenu">revenir</b>)
-                        <input type="text" class="wide" pattern="sera revenu"> .
+                        <input type="text" pattern="sera revenu"> .
                     </li>
 
                     <li>
                         Nous pourrons sortir après qu’il (<b title="aura plu">pleuvoir</b>)
-                        <input type="text" class="wide" pattern="aura plu"> .
+                        <input type="text" pattern="aura plu"> .
                     </li>
 
                     <li>
@@ -137,13 +137,13 @@
 
                     <li>
                         Ils (<b title="auront eu">avoir</b>)
-                        <input type="text" class="wide" pattern="auront eu">
+                        <input type="text" pattern="auront eu">
                         leurs résultats avant midi.
                     </li>
 
                     <li>
                         Lorsque tu (<b title="auras acheté">acheter</b>)
-                        <input type="text" class="wide" pattern="auras acheté">
+                        <input type="text" pattern="auras acheté">
                         une voiture, tu pourras voyager davantage.
                     </li>
 
@@ -155,13 +155,13 @@
 
                     <li>
                         Vous rirez dès qu’il vous (<b title="aura raconté">raconter</b>)
-                        <input type="text" class="wide" pattern="aura raconté">
+                        <input type="text" pattern="aura raconté">
                         sa dernière mésaventure.
                     </li>
 
                     <li>
                         Quand tu (<b title="auras fait">faire</b>)
-                        <input type="text" class="wide" pattern="auras fait">
+                        <input type="text" pattern="auras fait">
                         un choix, tu me le diras, n’est-ce pas ?
                     </li>
 
@@ -274,32 +274,32 @@
                     <li>
                         Nous leur parlerons seulement après qu’ils nous
                         (<b title="auront payé">payer</b>)
-                        <input type="text" class="wide" pattern="auront payé">
+                        <input type="text" pattern="auront payé">
                         un verre.
                     </li>
 
                     <li>
                         Je n’ai pas pu aider ma sœur. Elle
                         (<b title="aura certainement tout prévu">prévoir certainement tout</b>)
-                        <input type="text" class="wide" pattern="aura certainement tout prévu">
+                        <input type="text" class="extra-wide" pattern="aura certainement tout prévu">
                     </li>
 
                     <li>
                         Elle sera fière d’elle après qu’elle (<b title="aura battu">battre</b>)
-                        <input type="text" class="wide" pattern="aura battu">
+                        <input type="text" pattern="aura battu">
                         son adversaire.
                     </li>
 
                     <li>
                         Pendant notre vie, nous (<b title="aurons vécu">vivre</b>)
-                        <input type="text" class="wide" pattern="aurons vécu">
+                        <input type="text" pattern="aurons vécu">
                         au Canada et aux États-Unis.
                     </li>
 
                     <li>
                         Elle excusera mon comportement une fois que je lui
                         (<b title="aurai offert">offrir</b>)
-                        <input type="text" class="wide" pattern="aurai offert">
+                        <input type="text" pattern="aurai offert">
                         des fleurs.
                     </li>
 
