fixing XHTML validation

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -32,7 +32,8 @@
     <main spellcheck="false">
         <article class="text">
             <h2>La concordance au passé</h2>
-            <h3>Exercices de conjugaison</h3>
+            <h3>Conjuguez les verbes à l’imparfait, au passé composé et au plus-que-parfait</h3>
+
             <label>
                 <input type="checkbox" id="toggle-checkbox">afficher tous les indices
             </label>
