--- a/french/pages/exercise_concordance_conditional.html
+++ b/french/pages/exercise_concordance_conditional.html
@@ -25,6 +25,7 @@
     <main spellcheck="false">
         <article class="text">
             <h2>Les phrases de condition</h2>
+            <h3>&nbsp;</h3>
 
             <ol class="nested">
                 <li>
