fixed XHTML validation

--- a/french/pages/exercise_conditionalperfect.html
+++ b/french/pages/exercise_conditionalperfect.html
@@ -23,7 +23,7 @@
     <main spellcheck="false">
         <article class="text">
             <h2>Le conditionnel passé</h2>
-            <h3>Exercices de conjugaison</h3>
+            <h3>Exercices et corrigé</h3>
 
             <section>
                 <h4>Mettez le verbe au conditionnel passé et faites l’accord du participe passé.</h4>
