--- a/french/pages/exercise_passive.html
+++ b/french/pages/exercise_passive.html
@@ -23,6 +23,7 @@
     <main spellcheck="false">
         <article class="text">
             <h2>La forme passive</h2>
+            <h3>&nbsp;</h3>
 
             <ol class="nested">
                 <li>
