added exercise for negation (incomplete)

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -45,8 +45,8 @@
                     <label>
                         <input type="checkbox" name="conjugations" checked="checked">Conjugaisons
                     </label>
-                    <label>
-                        <input type="checkbox" name="others" checked="checked">Prépositions
+                    <label title="prépositions, conjonctions, pronoms">
+                        <input type="checkbox" name="others" checked="checked">Prép./conj./pronoms
                     </label>
                     <label>
                         <input type="checkbox" name="tense-sequence" checked="checked">Concordance des temps
@@ -61,7 +61,7 @@
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th class="conjugations" colspan="4">A1</th>
-                        <th class="conjugations others" colspan="7">A2</th>
+                        <th class="conjugations others" colspan="8">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
                         <th class="conjugations" colspan="5">B2</th>
                         <th class="tense-sequence" colspan="4"></th>
@@ -75,6 +75,7 @@
                         <th class="conjugations" colspan="2">imparfait</th>
                         <th class="conjugations" colspan="2">futur simple</th>
                         <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
+                        <th class="others" colspan="1" title="">négation</th>
                         <th class="conjugations" colspan="2">impératif</th>
 
                         <!-- B1 -->
@@ -110,6 +111,7 @@
                         <th class="conjugations"><a href="exercise_future.html">texte</a><small>*</small></th>
 
                         <th class="others"><a href="exercise_time_prepositions.html">texte</a><small>*</small></th>
+                        <th class="others"><a href="exercise_negation.html">texte</a><small>*</small></th>
 
                         <!-- impératif -->
                         <th class="conjugations"><a href="conjugations.html?L%27impératif">liste</a></th>
@@ -177,6 +179,7 @@
                             <td class="conjugations" data-key="exercise_future.html"></td>
 
                             <td class="others" data-key="exercise_time_prepositions.html"></td>
+                            <td class="others" data-key="exercise_negation.html"></td>
 
                             <td class="conjugations" data-key="conjugations.html?L%27imp%C3%A9ratif"></td>
                             <td class="conjugations" data-key="exercise_imperative.html"></td>
