--- a/french/index.html
+++ b/french/index.html
@@ -165,7 +165,7 @@
 
   <hr />
 
-  <h2>Les prépositions</h2>
+  <h2>Les prépositions, conjonctions, pronoms</h2>
 
   <div class="card">
     <span class="cefr">A2</span>
@@ -174,6 +174,12 @@
     <a href="pages/exercise_time_prepositions.html">exercice de texte</a>
   </div>
 
+  <div class="card">
+    <span class="cefr">A2</span>
+    <header>La négation</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_negation.html">exercice de texte</a>
+  </div>
 
 
   <hr />
